# NullEngine

./: CMakeLists.txt  README.md  vcpkg.json
assets/Shaders/: Basic.frag  Basic.vert
include/Core/: Application.h  Log.h  Timestep.h  Window.h
include/Graphics/: Buffer.h  OrthographicCamera.h  Renderer.h  Renderer2D.h  Shader.h  Texture.h  VertexArray.h
src/: Main.cpp
src/Core/: Application.cpp  Application.h  Log.cpp  Window.cpp  Window.h
src/Graphics/: Buffer.cpp  Buffer.h  OrthographicCamera.cpp  Renderer.cpp  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp
